--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,27 +3,15 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffff;
+  --background: #F5F5F5;
   --foreground: #1d052c;
-}
-/*
-TODO: add styling for dark mode later. 
- */
-@media (prefers-color-scheme: dark) {
-  :root {
-    /* --background: #0a0a0a;
-    --foreground: #ededed; */
-  }
 }
 
 body {
-  color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  overflow: scroll !important;
 }
 
-.clothing-container::-webkit-scrollbar {
+.admin-sidebar-links-container::-webkit-scrollbar {
   width: 0;
 }
 
@@ -37,3 +25,12 @@ body {
   }
 }
 
+input[type="date"]::-webkit-calendar-picker-indicator {
+  display: none;
+  -webkit-appearance: none;
+}
+
+select > option:hover {
+  background-color: black;
+  color: white;
+}
