--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,3 +34,15 @@ select > option:hover {
   background-color: black;
   color: white;
 }
+
+/* Hide number input arrows for Chrome, Safari, Edge, Opera */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Hide number input arrows for Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
