chore: update reusable components
- Updated reusable components

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,10 @@ body {
     display: none; /* Chrome, Safari, and Opera */
   }
 }
+.scrollbar-style {
+    scrollbar-width: thin;
+    scroll-behavior: smooth;
+}
 
 input[type="date"]::-webkit-calendar-picker-indicator {
   display: none;
