--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,3 +58,7 @@ input[type="number"] {
   -ms-overflow-style: none;  /* IE & Edge */
   scrollbar-width: none;     /* Firefox */
 }
+
+.box-shadow {
+  box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+}
