--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,3 +62,14 @@ input[type="number"] {
 .box-shadow {
   box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
 }
+
+  input:-webkit-autofill {
+    @apply bg-transparent !important; /* Makes background transparent */
+    -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+  }
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  input:-webkit-autofill:active {
+    @apply bg-transparent !important;
+    -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+  }
