chore: fix progress header component
- Fixed progress header component

--- a/src/features/admin/project-management/components/add-project/components/progress-header/ProgressHeader.css
+++ b/src/features/admin/project-management/components/add-project/components/progress-header/ProgressHeader.css
@@ -52,8 +52,8 @@
 
 .progress li.before .circle {
   border: 1px solid #e5e7eb;
-  background: #fff;
-  color: #bdbdbd;
+  background: #4e5eff;
+  color: #fff;
 }
 
 .progress li .label {
